# agame

main/: CMakeLists.txt  main1.md  main2.md
main/project/: example.gdextension  player_test.tscn  project.godot  test1.tscn  test_typed_dictionary.gd.uid
main/src/: blackhole.cpp  blackhole.h  debug_grid.cpp  debug_grid.h  example.h  hello_world.cpp  hello_world.h  register_types.cpp  shipcalc.cpp  shipcalc.h  spaceship.cpp  spaceship.h
